Fix responsive issues on mobile for manage bookings page and menu page.

--- a/booking/static/booking/css/booking.css
+++ b/booking/static/booking/css/booking.css
@@ -104,3 +104,27 @@ h1.text-center {
     font-size: 4em;
     color: var(--color-primary);
 }
+
+@media (max-width: 768px) {
+    .table th,
+    .table td {
+        padding: 0.5rem;
+        font-size: var(--font-size-small);
+        white-space: nowrap;
+    }
+
+    body header .heading-container h1.text-left { 
+        font-size: 1.5em;
+        margin-top: 15px;
+        text-align: left;
+    }
+
+    .table-responsive {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+    }
+
+    .table {
+        min-width: 600px; /* Adjust as needed */
+    }
+}
