--- a/menu/static/menu/css/menu.css
+++ b/menu/static/menu/css/menu.css
@@ -19,7 +19,7 @@ main {
     align-items: center;
     gap: 5px;
     margin-bottom: 15px;
-    margin-top: -120px;
+    margin-top: -60px;
 }
 
 .heading-container h1,
@@ -243,5 +243,23 @@ footer {
     }
     .side-item {
         width: 90%;
+    }
+    .pizza-item-create {
+        flex-direction: column;
+        align-items: stretch; /* Make boxes take full width */
+    }
+    .options-box {
+        width: 90%; /* Adjust width as needed */
+        margin-bottom: 15px; /* Add spacing between stacked boxes */
+    }
+
+    /* Make sides-list stack */
+    #sides-list {
+        flex-direction: column;
+        align-items: center;
+    }
+    .side-item {
+        width: 90%;
+        margin-bottom: 15px; /* Add spacing between stacked items */
     }
 }
